[tool.poetry]
name = "dae-utm"
version = "0.0.1"
description = ""
authors = ["Juan Madrid <juanmadridm20@gmail.com>"]
readme = "README.md"
packages = [{include = "dae_utm"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
requests = "^2.31.0"
simplekml = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
